salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/NVMStatsSF__NVM_Agent_Summary__c.object-meta.xml
<CustomObject>
    <label>NVM Agent Summary</label>
    <nameField>
        <displayFormat>ASR-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM Agent Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>