salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Agent__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NVM_Agent_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>