salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__AgentID__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__AgentID__c</fullName>
    <label>AgentID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>