salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__ChkStr__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__ChkStr__c</fullName>
    <label>ChkStr</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>