salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Date__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Date__c</fullName>
    <inlineHelpText>UTC Date</inlineHelpText>
    <label>UTC Date</label>
    <type>Date</type>
</CustomField>