salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__dateAgentId__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__dateAgentId__c</fullName>
    <description>Used as unique and INDEXED key to find a summary of an agent&apos;s calls on a given day.  We may need to suffix this with Channel if any agents on different NVM clouds have matching Agent IDs.</description>
    <externalId>true</externalId>
    <label>dateAgentId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>