salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Day_of_Week__c</fullName>
    <formula>IF(ISNULL( NVMStatsSF__Local_Date__c),
CASE(MOD(NVMStatsSF__Date__c - DATE(1900, 1, 6), 7),
2, &apos;1-Monday&apos;,
3, &apos;2-Tuesday&apos;,
4, &apos;3-Wednesday&apos;,
5, &apos;4-Thursday&apos;,
6, &apos;5-Friday&apos;,
0, &apos;6-Saturday&apos;,
1, &apos;7-Sunday&apos;, &apos; &apos;),
CASE(MOD(NVMStatsSF__Local_Date__c - DATE(1900, 1, 6), 7),
2, &apos;1-Monday&apos;,
3, &apos;2-Tuesday&apos;,
4, &apos;3-Wednesday&apos;,
5, &apos;4-Thursday&apos;,
6, &apos;5-Friday&apos;,
0, &apos;6-Saturday&apos;,
1, &apos;7-Sunday&apos;, &apos; &apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Day numbering from Monday=1, based on Local Date, defaulting to UTC Date if Local Date Absent</inlineHelpText>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>