salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Extended_Away_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Extended_Away_Time__c</fullName>
    <inlineHelpText>Extended Away Time in seconds</inlineHelpText>
    <label>Extended Away Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>