salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Extended_Away_Time_hh_mm_ss__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Extended_Away_Time_hh_mm_ss__c</fullName>
    <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Extended_Away_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; +  
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Extended_Away_Time__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Extended Away Time rounded to nearest minute</inlineHelpText>
    <label>Extended Away Time (hh:mm)</label>
    <type>Text</type>
</CustomField>