salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Fault_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Fault_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Sum of times in Fault on Line and Network Congestion states in seconds</inlineHelpText>
    <label>Fault Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>