salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__First_Login_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__First_Login_Time__c</fullName>
    <label>First Activity DateTime</label>
    <type>DateTime</type>
</CustomField>