salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Hold_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Hold_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total time in seconds that this agent put interactions on hold</inlineHelpText>
    <label>Hold Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>