salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__IEvtStr__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__IEvtStr__c</fullName>
    <inlineHelpText>Interaction Event String - system use only</inlineHelpText>
    <label>IEvtStr</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>