salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Inbond_Xfer_Call_Time_hh_mm__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Inbond_Xfer_Call_Time_hh_mm__c</fullName>
    <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Inbound_Transfer_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Inbound_Transfer_Time__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Inbound Transfer Time rounded to the nearest minute</inlineHelpText>
    <label>Inbound Transfer Time (hh:mm)</label>
    <type>Text</type>
</CustomField>