salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Inbound_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Inbound_Call_Time__c</fullName>
    <inlineHelpText>Inbound Call Time in seconds</inlineHelpText>
    <label>Inbound Call Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>