salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Inbound_Transfer_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Inbound_Transfer_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Inbound Transfer Time in seconds - includes both Busy Internal (consult time) and Transfer In (completed warm transfer time)</inlineHelpText>
    <label>Inbound Transfer Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>