salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Interrupted_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Interrupted_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total duration in seconds interactions were interrupted on this agent day</inlineHelpText>
    <label>Interrupted Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>