salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Key_Event_String__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Key_Event_String__c</fullName>
    <description>Reserved for System Use; field for tracking Agent State Event Stream</description>
    <inlineHelpText>Reserved for System Use; field for tracking Agent State Event Stream</inlineHelpText>
    <label>Key Event String</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>