salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Last_Logout_DateTime__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Last_Logout_DateTime__c</fullName>
    <label>Last Activity DateTime</label>
    <type>DateTime</type>
</CustomField>