salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Line_Busy_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Line_Busy_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total amount of time in seconds spent in Line Busy</inlineHelpText>
    <label>Line Busy Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>