salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Local_Date__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Local_Date__c</fullName>
    <inlineHelpText>Date from the Agent&apos;s perspective, respecting local DST</inlineHelpText>
    <label>Local Date</label>
    <type>Date</type>
</CustomField>