salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Logged_in_Time_hh_mm_ss__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Logged_in_Time_hh_mm_ss__c</fullName>
    <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Time_Logged_In__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Time_Logged_In__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total State Time for this Agent Day rounded to the nearest minute</inlineHelpText>
    <label>Total State Time (hh:mm)</label>
    <type>Text</type>
</CustomField>