salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Longest_State__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Longest_State__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Longest time in seconds the agent spent in a single state</inlineHelpText>
    <label>Longest State Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>