salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__No_Answer_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__No_Answer_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total time in seconds that the Agent spent in No Answer state</description>
    <inlineHelpText>Total time in seconds that the Agent spent in No Answer state</inlineHelpText>
    <label>No Answer Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>