salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__No_Answers_to_Consult__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__No_Answers_to_Consult__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of times this Agent was invited to a Consultation but did not answer</inlineHelpText>
    <label>No Answers to Consult</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>