salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Number_of_Holds__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Holds__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of times this agent initiated a hold for a customer</inlineHelpText>
    <label>Number of Holds</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>