salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Number_of_Inbound_Calls_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Inbound_Calls_FORMULA__c</fullName>
    <formula>NVMStatsSF__Number_of_Inbound_Calls__c +  NVMStatsSF__Number_of_Inbound_Transfers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>All calls inbound to this agent including ones delivered via ACD or transfer</inlineHelpText>
    <label>Number of Inbound Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>