salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Number_of_Inbound_Transfers__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Inbound_Transfers__c</fullName>
    <inlineHelpText>Number of Calls transferred to the agent directly from another Agent (not through a queue transfer)</inlineHelpText>
    <label>Number of Inbound Transfers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>