salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Number_of_Line_Busy__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Line_Busy__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of times the agent went Line Busy</inlineHelpText>
    <label>Number of Line Busy</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>