salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Number_of_Logins__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Logins__c</fullName>
    <label>Number of Logins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>