salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Number_of_No_Answers__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_No_Answers__c</fullName>
    <label>Number of No Answers</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>