salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Number_of_Parks__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Parks__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of times interactions were parked on this agent day</inlineHelpText>
    <label>Number of Parks</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>