salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Number_of_Times_Consulted__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Times_Consulted__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of times this Agent was invited to a consultation on an Interaction</inlineHelpText>
    <label>Number of Times Consulted</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>