salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Number_of_Wrap_Phases__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Wrap_Phases__c</fullName>
    <inlineHelpText>Counts a series of consecutive wraps (e.g. Auto then Manual Wrap) as a single Wrap phase</inlineHelpText>
    <label>Number of Wrap Phases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>