salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Number_of_Wraps__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Wraps__c</fullName>
    <label>Number of Wraps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>