salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Park_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Park_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total duration in seconds interactions were parked on this agent day</inlineHelpText>
    <label>Park Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>