salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Ready_for_Outbound_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Ready_for_Outbound_Time__c</fullName>
    <inlineHelpText>Ready for Outbound Time in seconds</inlineHelpText>
    <label>Ready For Outbound Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>