salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Ready_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Ready_Time__c</fullName>
    <inlineHelpText>Ready Time in seconds</inlineHelpText>
    <label>Ready Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>