salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Role__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Role__c</fullName>
    <inlineHelpText>User&apos;s role on the day this summary was created</inlineHelpText>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>