salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__State_List__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__State_List__c</fullName>
    <inlineHelpText>Delimited list of re-labelled States and durations in the format [State]-[Duration(s)], [State]-[Duration(s)],...</inlineHelpText>
    <label>State List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>