salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Time_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Time_Logged_In__c</fullName>
    <inlineHelpText>Total State time for this Agent Day in seconds excluding Logged Out state</inlineHelpText>
    <label>Total State Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>