salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Time_Zone__c</fullName>
    <inlineHelpText>Time Zone of this Agent - inherited from the User Record carrying the same NVM Agent ID or defaulted to the Time Zone of the Channel transaction which fetched the data</inlineHelpText>
    <label>Time Zone</label>
    <length>64</length>
    <type>Text</type>
</CustomField>