salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Week_of_Year__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Week_of_Year__c</fullName>
    <formula>TEXT(IF( 
CEILING(( NVMStatsSF__Date__c  - DATE(YEAR(NVMStatsSF__Date__c), 1, 1) + 1)/7) &gt; 52, 52, CEILING((NVMStatsSF__Date__c - DATE(YEAR(NVMStatsSF__Date__c), 1, 1) + 1)/7) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week of Year</label>
    <type>Text</type>
</CustomField>