salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Wrap_Time_hh_mm__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Wrap_Time_hh_mm__c</fullName>
    <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Wrap_Up_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Wrap_Up_Time__c , 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Wrap Time rounded to the nearest minute</inlineHelpText>
    <label>Wrap Time (hh:mm)</label>
    <type>Text</type>
</CustomField>