salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/fields/NVMStatsSF__Wrap_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Wrap_Up_Time__c</fullName>
    <inlineHelpText>Total Wrap Time in seconds</inlineHelpText>
    <label>Wrap Up Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>