salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/listViews/NVMStatsSF__All.listView-meta.xml
<ListView>
    <fullName>NVMStatsSF__All</fullName>
    <columns>NAME</columns>
    <columns>NVMStatsSF__AgentID__c</columns>
    <columns>NVMStatsSF__Agent__c</columns>
    <columns>NVMStatsSF__Date__c</columns>
    <columns>NVMStatsSF__First_Login_Time__c</columns>
    <columns>NVMStatsSF__Last_Logout_DateTime__c</columns>
    <columns>NVMStatsSF__Logged_in_Time_hh_mm_ss__c</columns>
    <columns>NVMStatsSF__Ready_Time_hh_mm_ss__c</columns>
    <columns>NVMStatsSF__Inbound_Call_Time_hh_mm_ss__c</columns>
    <columns>NVMStatsSF__Outbound_Call_Time_hh_mm_ss__c</columns>
    <columns>NVMStatsSF__Wrap_Up_Time__c</columns>
    <columns>NVMStatsSF__Number_of_No_Answers__c</columns>
    <columns>NVMStatsSF__Number_of_Inbound_Calls__c</columns>
    <columns>NVMStatsSF__Number_of_Aways__c</columns>
    <columns>NVMStatsSF__Number_of_Extended_Away__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>