salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Agent_Summary__c/listViews/NVMStatsSF__All1.listView-meta.xml
<ListView>
    <fullName>NVMStatsSF__All1</fullName>
    <columns>NAME</columns>
    <columns>NVMStatsSF__Agent__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>